[package]
name = "raft"
version = "0.1.0"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
tokio-test = "0.2"
bytes = "1"
async-trait = "0.1"
tonic = "0.3"
prost = "0.6"

[build-dependencies]
tonic-build = "0.3.0"
