[package]
name = "scheduler"
version = "0.1.0"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
edition = "2018"

[dependencies]
async-raft = "0.6"
bytes = "1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.5", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

[build-dependencies]
tonic-build = "0.4"